--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                                 <button class="journey-btn read-more">Read More</button>
                                 <div class="details">
                                     <!-- <p>Built responsive UIs using React.js and optimized load times by 30%.</p> -->
-                                    <a href="#" id="hero-btn" class="journey-btn more-details">View Certificate</a>
+                                    <a href="#" class="journey-btn more-details">View Certificate</a>
                                 </div>
                             </div>
                         </div>
