--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                 <button class="journey-btn read-more">Read More</button>
                                 <div class="details">
                                     <p>A online Certification Course provided by Swayam (NPTEL) or IIT Kharagpur about Indian Knowledge System.</p>
-                                    <a href="#" id="hero-btn" class="journey-btn more-details">View Certificate</a>
+                                    <a href="#" class="journey-btn more-details">View Certificate</a>
                                 </div>
                             </div>
                         </div>
@@ -140,7 +140,7 @@
                                 <button class="journey-btn read-more">Read More</button>
                                 <div class="details">
                                     <p>A 3 months skills development Government program for basic knowledge of Computer, Learn about MicroSoft Office, Exploring Google products and Typing .</p>
-                                    <a href="#" id="hero-btn" class="journey-btn more-details">View Certificate</a>
+                                    <a href="#" class="journey-btn more-details">View Certificate</a>
                                 </div>
                             </div>
                         </div>
@@ -152,7 +152,7 @@
                                 <button class="journey-btn read-more">Read More</button>
                                 <div class="details">
                                     <p>Build Some Web projects such Music Player, portfolio, HomePage etc. </p>
-                                    <a href="#" id="hero-btn" class="journey-btn more-details">View Certificate</a>
+                                    <a href="#"class="journey-btn more-details">View Certificate</a>
                                 </div>
                             </div>
                         </div>
@@ -184,7 +184,7 @@
                                 <button class="journey-btn read-more">Read More</button>
                                 <div class="details">
                                     <p>Build Some Web projects such Music Player, portfolio, HomePage etc. </p>
-                                    <a href="#" id="hero-btn" class="journey-btn more-details">View Certificate</a>
+                                    <a href="#" class="journey-btn more-details">View Certificate</a>
                                 </div>
                             </div>
                         </div>
@@ -196,7 +196,7 @@
                                 <button class="journey-btn read-more">Read More</button>
                                 <div class="details">
                                     <p>Building projects such Home Network Setup, Office Network Setup etc. </p>
-                                    <a href="#" id="hero-btn" class="journey-btn more-details">View Certificate</a>
+                                    <a href="#" class="journey-btn more-details">View Certificate</a>
                                 </div>
                             </div>
                         </div>
